k8s/tool/report-server/report-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: report-server
  namespace: default
  labels:
    app: report-server
    config_source: "static"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: report-server
  template:
    metadata:
      labels:
        app: report-server
    spec:
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
        volumeMounts:
        - name: jmeter-report
          mountPath: /usr/share/nginx/html
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: jmeter-report
        persistentVolumeClaim:
          claimName: jmeter-data-dir-pvc
      - name: nginx-conf
        configMap:
          name: report-server-nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: report-server
  namespace: default
spec:
  selector:
    app: report-server
  ports:
  - port: 80
    targetPort: 80
