k8s/tool/report-server/report-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: report-server
spec:
  rules:
  - host: report.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: report-server
            port:
              number: 80
